--- a/index.html
+++ b/index.html
@@ -1,12 +1,212 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-  <title>SurVis Literature Review</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>研究论文概览</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; color: #333; }
+        header { text-align: center; margin-bottom: 30px; }
+        header h1 { color: #333; }
+        header p { font-size: 1.1em; }
+        #live-url { margin-bottom:20px; padding:10px; background-color: #e7f3fe; border-left: 6px solid #2196F3; text-align: center;}
+        #live-url a { font-weight: bold; }
+        #screenshot-container { text-align: center; margin-bottom: 30px; }
+        #screenshot-container img { max-width: 80%; height: auto; border: 1px solid #ddd; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        .controls { margin-bottom: 20px; padding: 15px; background-color: #fff; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 15px;}
+        .controls label { margin-right: 5px; font-weight: bold; }
+        .controls select, .controls input { padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
+        #papers-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); gap: 20px; }
+        .paper-entry { background-color: #fff; border: 1px solid #ddd; border-radius: 8px; padding: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.05); display: flex; flex-direction: column; }
+        .paper-entry img { max-width: 100%; height: 180px; object-fit: cover; border-radius: 4px; margin-bottom: 10px; align-self: center; }
+        .paper-entry h3 { font-size: 1.15em; margin-top: 0; margin-bottom: 10px; color: #0056b3; }
+        .paper-entry p { font-size: 0.9em; margin-bottom: 8px; line-height: 1.4; }
+        .paper-entry strong { color: #444; }
+        .paper-entry details { margin-top: 10px; font-size: 0.85em;}
+        .paper-entry summary { cursor: pointer; font-weight: bold; color: #0056b3; margin-bottom: 5px; }
+        .paper-entry .links a { margin-right: 10px; color: #007bff; text-decoration: none; }
+        .paper-entry .links a:hover { text-decoration: underline; }
+        .paper-abstract { background-color: #f9f9f9; padding: 8px; border-radius: 4px; border: 1px solid #eee; }
+        footer { text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #ccc; font-size: 0.9em; }
+    </style>
 </head>
 <body>
-  <h1>文献分类可视化</h1>
-  <div id="paper-list"></div>
-  <script src="js/script.js"></script>
+    <header>
+        <h1>研究论文概览</h1>
+        <p>一个动态展示研究论文并提供筛选功能的列表。</p>
+    </header>
+
+    <div id="live-url">
+        <strong>在线页面URL:</strong> <a href="YOUR_GITHUB_PAGES_URL_WILL_APPEAR_HERE" id="ghPagesUrl" target="_blank">您的 GitHub Pages URL 将会在此显示</a>
+    </div>
+
+    <div id="screenshot-container">
+        <h2>页面截图</h2>
+        <img src="placeholder_screenshot.png" alt="SurVis 页面截图 (占位符)" id="pageScreenshot">
+        <p><small>请注意: 这是一个占位符。当您的页面上线后，请用真实的截图替换它。</small></p>
+    </div>
+
+    <div class="controls">
+        <div>
+            <label for="categoryFilter">分类:</label>
+            <select id="categoryFilter">
+                <option value="">全部</option>
+            </select>
+        </div>
+        <div>
+            <label for="yearFilter">年份:</label>
+            <select id="yearFilter">
+                <option value="">全部</option>
+            </select>
+        </div>
+        <div>
+            <label for="searchQuery">搜索标题:</label>
+            <input type="text" id="searchQuery" placeholder="输入关键词...">
+        </div>
+    </div>
+
+    <div id="papers-container">
+        </div>
+
+    <footer>
+        <p>由自定义脚本驱动。灵感来源于 SurVis。托管于 GitHub Pages。</p>
+    </footer>
+
+    <script>
+        let allPapers = [];
+
+        async function fetchPapers() {
+            try {
+                // 确保 papers.json 与 index.html 在同一目录下，或者提供正确路径
+                const response = await fetch('papers.json');
+                if (!response.ok) {
+                    throw new Error(`HTTP 错误! 状态: ${response.status}`);
+                }
+                allPapers = await response.json();
+                populateFilters();
+                renderPapers();
+            } catch (error) {
+                console.error("无法获取论文数据:", error);
+                document.getElementById('papers-container').innerHTML = '<p>加载论文数据时出错。请检查控制台以获取更多信息，并确保 `papers.json` 文件存在且路径正确。</p>';
+            }
+        }
+
+        function populateFilters() {
+            const categoryFilter = document.getElementById('categoryFilter');
+            const yearFilter = document.getElementById('yearFilter');
+
+            // 清空已有的选项 (除了 "全部")
+            categoryFilter.length = 1;
+            yearFilter.length = 1;
+
+            const categories = [...new Set(allPapers.map(paper => paper.category))].sort();
+            const years = [...new Set(allPapers.map(paper => paper.year))].sort((a, b) => b - a); // 年份降序
+
+            categories.forEach(category => {
+                if (category) { // 确保分类不是 undefined 或 null
+                    const option = document.createElement('option');
+                    option.value = category;
+                    option.textContent = category;
+                    categoryFilter.appendChild(option);
+                }
+            });
+
+            years.forEach(year => {
+                 if (year) { // 确保年份不是 undefined 或 null
+                    const option = document.createElement('option');
+                    option.value = year;
+                    option.textContent = year;
+                    yearFilter.appendChild(option);
+                }
+            });
+        }
+
+        function renderPapers() {
+            const container = document.getElementById('papers-container');
+            container.innerHTML = ''; // 清除现有论文
+
+            const selectedCategory = document.getElementById('categoryFilter').value;
+            const selectedYear = document.getElementById('yearFilter').value;
+            const searchQuery = document.getElementById('searchQuery').value.toLowerCase().trim();
+
+            const filteredPapers = allPapers.filter(paper => {
+                const matchesCategory = selectedCategory ? paper.category === selectedCategory : true;
+                const matchesYear = selectedYear ? paper.year.toString() === selectedYear : true;
+                const matchesSearch = searchQuery ? paper.title.toLowerCase().includes(searchQuery) || paper.authors.toLowerCase().includes(searchQuery) || (paper.abstract && paper.abstract.toLowerCase().includes(searchQuery)) : true;
+                return matchesCategory && matchesYear && matchesSearch;
+            });
+
+            if (filteredPapers.length === 0) {
+                container.innerHTML = "<p>没有找到符合当前筛选条件的论文。</p>";
+                return;
+            }
+
+            filteredPapers.forEach(paper => {
+                const paperElement = document.createElement('div');
+                paperElement.className = 'paper-entry';
+
+                let doiLink = paper.doi;
+                let displayDoi = paper.doi;
+
+                if (paper.doi && paper.doi !== "Not provided" && paper.doi.trim() !== "") {
+                    if (paper.doi.toLowerCase().startsWith("arxiv:")) {
+                        doiLink = `https://arxiv.org/abs/${paper.doi.substring(6)}`;
+                    } else if (!paper.doi.startsWith("http")) {
+                        doiLink = `https://doi.org/${paper.doi}`;
+                    }
+                } else {
+                    displayDoi = "未提供";
+                    doiLink = "#"; // 无效链接
+                }
+
+                const imagePath = paper.image ? paper.image : 'images/placeholder_image.png'; // 默认图片路径
+
+                paperElement.innerHTML = `
+                    <img src="${imagePath}" alt="论文《${paper.title}》的缩略图" onerror="this.onerror=null; this.src='images/placeholder_image.png'; this.alt='图片加载失败';">
+                    <h3>${paper.title}</h3>
+                    <p><strong>作者:</strong> ${paper.authors}</p>
+                    <p><strong>年份:</strong> ${paper.year}</p>
+                    <p class="links">
+                        <strong>DOI:</strong> ${displayDoi === "未提供" ? displayDoi : `<a href="${doiLink}" target="_blank" rel="noopener noreferrer">${displayDoi}</a>`}
+                    </p>
+                    <p class="links">
+                        <strong>PDF:</strong> ${paper.pdf_url ? `<a href="${paper.pdf_url}" target="_blank" rel="noopener noreferrer">访问 PDF</a>` : "未提供"}
+                    </p>
+                    <p><strong>分类:</strong> ${paper.category}</p>
+                    <p><strong>子分类:</strong> ${paper.subcategory}</p>
+                    ${paper.abstract ? `
+                    <details>
+                        <summary>摘要</summary>
+                        <p class="paper-abstract">${paper.abstract}</p>
+                    </details>
+                    ` : '<p>摘要未提供</p>'}
+                `;
+                container.appendChild(paperElement);
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchPapers(); // 页面加载完成后获取并渲染论文
+
+            // 为筛选控件添加事件监听器
+            document.getElementById('categoryFilter').addEventListener('change', renderPapers);
+            document.getElementById('yearFilter').addEventListener('change', renderPapers);
+            document.getElementById('searchQuery').addEventListener('input', renderPapers); // 实时搜索
+
+            // 尝试动态设置 GitHub Pages URL (如果部署在 GitHub Pages 上)
+            // 注意: 这依赖于标准的 GitHub Pages URL 结构
+            if (window.location.hostname.includes('github.io')) {
+                const pathParts = window.location.pathname.split('/').filter(part => part.length > 0);
+                const username = window.location.hostname.split('.')[0];
+                if (pathParts.length > 0) {
+                    const repoName = pathParts[0];
+                    const liveUrl = `https://${username}.github.io/${repoName}/`;
+                    const urlLinkElement = document.getElementById('ghPagesUrl');
+                    urlLinkElement.href = liveUrl;
+                    urlLinkElement.textContent = liveUrl;
+                }
+            }
+        });
+    </script>
 </body>
 </html>
