--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
     <div id="screenshot-container">
         <h2>页面截图</h2>
-        <img src="images/placeholder_screenshot.png" alt="SurVis 页面截图 (占位符)" id="pageScreenshot">
-        <p><small>请注意: 这是一个占位符。当您的页面上线后，请用真实的截图替换它。</small></p>
+        <img src="images/ppaper11" alt="SurVis 页面截图 (占位符)" id="pageScreenshot">
     </div>
 
     <div class="controls">
