--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div id="screenshot-container">
         <h2>页面截图</h2>
-        <img src="images/ppaper11" alt="SurVis 页面截图 (占位符)" id="pageScreenshot">
+        <img src="images/paper11" alt="SurVis 页面截图 (占位符)" id="pageScreenshot">
     </div>
 
     <div class="controls">
